[package]
name = "quant"
version = "0.1.0"
edition = "2021"


[dependencies]
dict_derive = "0.4.0"
rand="0.8.4"
serde= { version = "1.0.130", features = ["derive"] }
serde_json="1.0.71"
anyhow="1.0.48"
sqlx = { version = "0.5.9", features = [ "runtime-tokio-native-tls" , "mysql" ] }
tokio = { version = "1.14.0", features = ["full"] }
futures="0.3.18"

rocket = {version= "0.5.0-rc.1",features= ["json"]}