[package]
name = "quant"
version = "0.1.0"
edition = "2021"


[dependencies]
dict_derive = "0.4.0"
rand="0.8.4"
serde= { version = "1.0.130", features = ["derive"] }
serde_json="1.0.71"
anyhow={version="1.0.48",feature = "std"}
sqlx = { version = "0.5.9", features = [ "runtime-tokio-native-tls" , "mysql" ,"chrono"] }
tokio = { version = "1.14.0", features = ["full"] }
futures="0.3.18"
axum="0.4.0"
lazy_static="1.4.0"